{
  "version": 4,
  "terraform_version": "1.2.1",
  "serial": 28,
  "lineage": "52177101-cdb8-9151-dc68-6f2531ce0327",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ebee96ad3dbe382b",
            "associate_with_private_ip": "192.168.1.50",
            "association_id": "eipassoc-036c4bcab2b2d8974",
            "domain": "vpc",
            "id": "eipalloc-0ebee96ad3dbe382b",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0215c1afd38ab5901",
            "private_dns": "ip-192-168-1-50.eu-central-1.compute.internal",
            "private_ip": "192.168.1.50",
            "public_dns": "ec2-3-122-173-48.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.122.173.48",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.test-web-app",
            "aws_network_interface.jenkins",
            "aws_security_group.allow-all-outbound",
            "aws_security_group.allow-jenkins-traffic",
            "aws_security_group.allow-ssh-traffic",
            "aws_security_group.allow-staging-traffic",
            "aws_subnet.subnet-public-jenkins",
            "aws_vpc.test-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "test-web-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.3.50",
            "domain": "vpc",
            "id": "eipalloc-0aa5ef268c510a632",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.test-web-app",
            "aws_network_interface.test-web-app",
            "aws_security_group.allow-all-outbound",
            "aws_security_group.allow-ssh-traffic",
            "aws_security_group.allow-web-traffic",
            "aws_subnet.subnet-public-web-app",
            "aws_vpc.test-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test-web-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:872380957844:internet-gateway/igw-0256fbb32ec4bf838",
            "id": "igw-0256fbb32ec4bf838",
            "owner_id": "872380957844",
            "vpc_id": "vpc-0a24b4b5f02a7d18e"
          },
          "dependencies": [
            "aws_vpc.test-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:872380957844:network-interface/eni-0215c1afd38ab5901",
            "id": "eni-0215c1afd38ab5901",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:f0:1b:fa:87:9a",
            "owner_id": "872380957844",
            "private_dns_name": "ip-192-168-1-50.eu-central-1.compute.internal",
            "private_ip": "192.168.1.50",
            "private_ip_list": [
              "192.168.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "192.168.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-01a1f465b5406c75e",
              "sg-04dc3d60bc94fcd40",
              "sg-05c5db3c999097e37",
              "sg-0990985396f5063ff"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a1c979a3033b3922"
          },
          "dependencies": [
            "aws_security_group.allow-all-outbound",
            "aws_security_group.allow-jenkins-traffic",
            "aws_security_group.allow-ssh-traffic",
            "aws_security_group.allow-staging-traffic",
            "aws_subnet.subnet-public-jenkins",
            "aws_vpc.test-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "test-web-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:872380957844:network-interface/eni-0c9e317b614fced62",
            "id": "eni-0c9e317b614fced62",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:6d:36:90:88:ee",
            "owner_id": "872380957844",
            "private_dns_name": "ip-192-168-2-50.eu-central-1.compute.internal",
            "private_ip": "192.168.2.50",
            "private_ip_list": [
              "192.168.2.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "192.168.2.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-01a1f465b5406c75e",
              "sg-0990985396f5063ff",
              "sg-0a11f17471d8a5c6e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-058a93d2dfcdc5054"
          },
          "dependencies": [
            "aws_security_group.allow-all-outbound",
            "aws_security_group.allow-ssh-traffic",
            "aws_security_group.allow-web-traffic",
            "aws_subnet.subnet-public-web-app",
            "aws_vpc.test-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "allow-outgoing-access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:872380957844:route-table/rtb-0f8b492ba863918de",
            "id": "rtb-0f8b492ba863918de",
            "owner_id": "872380957844",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0256fbb32ec4bf838",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Final Project Route Table"
            },
            "tags_all": {
              "Name": "Final Project Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a24b4b5f02a7d18e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.test-web-app",
            "aws_vpc.test-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jenkins-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c76f48375958e9c2",
            "route_table_id": "rtb-0f8b492ba863918de",
            "subnet_id": "subnet-0a1c979a3033b3922"
          },
          "dependencies": [
            "aws_internet_gateway.test-web-app",
            "aws_route_table.allow-outgoing-access",
            "aws_subnet.subnet-public-jenkins",
            "aws_vpc.test-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web-app-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069698adb9cde8a07",
            "route_table_id": "rtb-0f8b492ba863918de",
            "subnet_id": "subnet-058a93d2dfcdc5054"
          },
          "dependencies": [
            "aws_internet_gateway.test-web-app",
            "aws_route_table.allow-outgoing-access",
            "aws_subnet.subnet-public-web-app",
            "aws_vpc.test-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-all-outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:872380957844:security-group/sg-0990985396f5063ff",
            "description": "Allow all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0990985396f5063ff",
            "ingress": [],
            "name": "allow-all-outbound",
            "name_prefix": "",
            "owner_id": "872380957844",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a24b4b5f02a7d18e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-jenkins-traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:872380957844:security-group/sg-05c5db3c999097e37",
            "description": "Allow jenkins inbound traffic",
            "egress": [],
            "id": "sg-05c5db3c999097e37",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Jenkins",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "allow-jenkins-traffic",
            "name_prefix": "",
            "owner_id": "872380957844",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a24b4b5f02a7d18e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh-traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:872380957844:security-group/sg-01a1f465b5406c75e",
            "description": "Allow SSH inbound traffic",
            "egress": [],
            "id": "sg-01a1f465b5406c75e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh-traffic",
            "name_prefix": "",
            "owner_id": "872380957844",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a24b4b5f02a7d18e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-staging-traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:872380957844:security-group/sg-04dc3d60bc94fcd40",
            "description": "Allow Inbound traffic for security checks",
            "egress": [],
            "id": "sg-04dc3d60bc94fcd40",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Staging",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "allow-stagin-traffic",
            "name_prefix": "",
            "owner_id": "872380957844",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a24b4b5f02a7d18e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-web-traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:872380957844:security-group/sg-0a11f17471d8a5c6e",
            "description": "Allow HTTP / HTTPS inbound traffic",
            "egress": [],
            "id": "sg-0a11f17471d8a5c6e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow-web-traffic",
            "name_prefix": "",
            "owner_id": "872380957844",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a24b4b5f02a7d18e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-public-jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:872380957844:subnet/subnet-0a1c979a3033b3922",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a1c979a3033b3922",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "872380957844",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Final Project Jenkins Subnet"
            },
            "tags_all": {
              "Name": "Final Project Jenkins Subnet"
            },
            "vpc_id": "vpc-0a24b4b5f02a7d18e"
          },
          "dependencies": [
            "aws_vpc.test-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-public-web-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:872380957844:subnet/subnet-058a93d2dfcdc5054",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-058a93d2dfcdc5054",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "872380957844",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Final Project Web App Subnet"
            },
            "tags_all": {
              "Name": "Final Project Web App Subnet"
            },
            "vpc_id": "vpc-0a24b4b5f02a7d18e"
          },
          "dependencies": [
            "aws_vpc.test-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test-web-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:872380957844:vpc/vpc-0a24b4b5f02a7d18e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0c05ccf545496603a",
            "default_route_table_id": "rtb-06e236210b9593188",
            "default_security_group_id": "sg-0286e8dfd11fca1ea",
            "dhcp_options_id": "dopt-02fc99f262e9a42b4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a24b4b5f02a7d18e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06e236210b9593188",
            "owner_id": "872380957844",
            "tags": {
              "Name": "Final Project VPC"
            },
            "tags_all": {
              "Name": "Final Project VPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.app-server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-065deacbcaac64cf2",
            "arn": "arn:aws:ec2:eu-central-1:872380957844:instance/i-04128de5fd2f613ea",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "test-web-app",
            "id": "i-04128de5fd2f613ea",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "final_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0c9e317b614fced62"
              }
            ],
            "primary_network_interface_id": "eni-0c9e317b614fced62",
            "private_dns": "ip-192-168-2-50.eu-central-1.compute.internal",
            "private_ip": "192.168.2.50",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f03aa8538a4c1bde",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-058a93d2dfcdc5054",
            "tags": {
              "Name": "Test Web App"
            },
            "tags_all": {
              "Name": "Test Web App"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01a1f465b5406c75e",
              "sg-0990985396f5063ff",
              "sg-0a11f17471d8a5c6e"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.test-web-app",
            "aws_iam_role.test-web-app",
            "aws_key_pair.app_final_key",
            "aws_network_interface.test-web-app",
            "aws_security_group.allow-all-outbound",
            "aws_security_group.allow-ssh-traffic",
            "aws_security_group.allow-web-traffic",
            "aws_subnet.subnet-public-web-app",
            "aws_vpc.test-web-app",
            "data.aws_ami.ubuntu",
            "tls_private_key.app_key"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins",
      "mode": "managed",
      "type": "aws_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    }
  ]
}